{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 208,
  "lineage": "81dde65e-20fb-c92e-8b15-fcb8b4dcd6b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3b87d4cdc06ce49",
            "domain": "vpc",
            "id": "eipalloc-0c3b87d4cdc06ce49",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-20-143-236.compute-1.amazonaws.com",
            "public_ip": "52.20.143.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-EIP",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-EIP",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:internet-gateway/igw-03d5f0aa0ac3e2ba0",
            "id": "igw-03d5f0aa0ac3e2ba0",
            "owner_id": "046660960196",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-0f8a7db886e16a629-IG!",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-0f8a7db886e16a629-IG!",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:loadbalancer/app/ext-alb/7d75d9872b6578d4",
            "arn_suffix": "app/ext-alb/7d75d9872b6578d4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-169160528.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:046660960196:loadbalancer/app/ext-alb/7d75d9872b6578d4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-01508e3f0bae1fb47"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03ac46febb1735e91"
              },
              {
                "subnet_id": "subnet-058beb16f169e5cc8"
              }
            ],
            "subnets": [
              "subnet-03ac46febb1735e91",
              "subnet-058beb16f169e5cc8"
            ],
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "vpc_id": "vpc-0f8a7db886e16a629",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:loadbalancer/app/ialb/234b4b7579f50fe9",
            "arn_suffix": "app/ialb/234b4b7579f50fe9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-1236131876.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:046660960196:loadbalancer/app/ialb/234b4b7579f50fe9",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "security_groups": [
              "sg-01c6f6786d8a3314a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0098bc76d48e7e2b5"
              },
              {
                "subnet_id": "subnet-01dc4ee0d962aaabb"
              }
            ],
            "subnets": [
              "subnet-0098bc76d48e7e2b5",
              "subnet-01dc4ee0d962aaabb"
            ],
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "vpc_id": "vpc-0f8a7db886e16a629",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:listener/app/ext-alb/7d75d9872b6578d4/6b54574362367688",
            "certificate_arn": "arn:aws:acm:us-east-1:046660960196:certificate/a38dd1fb-33bb-4eb9-8d7e-9f05fbc00f12",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/nginx-tgt/dc2b2f9cfb1af071",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:046660960196:listener/app/ext-alb/7d75d9872b6578d4/6b54574362367688",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:loadbalancer/app/ext-alb/7d75d9872b6578d4",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.mosesitoya",
            "aws_acm_certificate_validation.mosesitoya",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.mosesitoya",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.mosesitoya"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:listener/app/ialb/234b4b7579f50fe9/5f99ecdeec252b42",
            "certificate_arn": "arn:aws:acm:us-east-1:046660960196:certificate/a38dd1fb-33bb-4eb9-8d7e-9f05fbc00f12",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/wordpress-tgt/54f10d4e939ec612",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:046660960196:listener/app/ialb/234b4b7579f50fe9/5f99ecdeec252b42",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:loadbalancer/app/ialb/234b4b7579f50fe9",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.mosesitoya",
            "aws_acm_certificate_validation.mosesitoya",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.mosesitoya",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.mosesitoya"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/tooling-tgt/1c979e51e16dbe42",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:listener-rule/app/ialb/234b4b7579f50fe9/5f99ecdeec252b42/9cc2c3230cbf0ef3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.mosesitoya.link"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:046660960196:listener-rule/app/ialb/234b4b7579f50fe9/5f99ecdeec252b42/9cc2c3230cbf0ef3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:listener/app/ialb/234b4b7579f50fe9/5f99ecdeec252b42",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.mosesitoya",
            "aws_acm_certificate_validation.mosesitoya",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.mosesitoya",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.mosesitoya"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/nginx-tgt/dc2b2f9cfb1af071",
            "arn_suffix": "targetgroup/nginx-tgt/dc2b2f9cfb1af071",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/nginx-tgt/dc2b2f9cfb1af071",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/tooling-tgt/1c979e51e16dbe42",
            "arn_suffix": "targetgroup/tooling-tgt/1c979e51e16dbe42",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/tooling-tgt/1c979e51e16dbe42",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/wordpress-tgt/54f10d4e939ec612",
            "arn_suffix": "targetgroup/wordpress-tgt/54f10d4e939ec612",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:046660960196:targetgroup/wordpress-tgt/54f10d4e939ec612",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3b87d4cdc06ce49",
            "connectivity_type": "public",
            "id": "nat-02e52862d3ae49bcd",
            "network_interface_id": "eni-03c78f4965c08159b",
            "private_ip": "172.16.0.126",
            "public_ip": "52.20.143.236",
            "subnet_id": "subnet-03ac46febb1735e91",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-Nat",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-Nat",
              "Owner-Email": "thursdayfrip@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03d5f0aa0ac3e2ba0",
            "id": "r-rtb-0a72878817e979fb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a72878817e979fb2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:route-table/rtb-04ab00750414b843b",
            "id": "rtb-04ab00750414b843b",
            "owner_id": "046660960196",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-Private-Route-Table-production",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-Private-Route-Table-production",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:route-table/rtb-0a72878817e979fb2",
            "id": "rtb-0a72878817e979fb2",
            "owner_id": "046660960196",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-Public-Route-Table",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-Public-Route-Table",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0350d3fe278311ce3",
            "route_table_id": "rtb-04ab00750414b843b",
            "subnet_id": "subnet-0098bc76d48e7e2b5"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084ee7fed01aec7cf",
            "route_table_id": "rtb-04ab00750414b843b",
            "subnet_id": "subnet-01dc4ee0d962aaabb"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071c5c58e6f56f5a6",
            "route_table_id": "rtb-04ab00750414b843b",
            "subnet_id": "subnet-00061e0538a799c2f"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a81b9ad7510b469d",
            "route_table_id": "rtb-04ab00750414b843b",
            "subnet_id": "subnet-08063b964ce05c7d6"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bd24e5d4e22a3bb",
            "route_table_id": "rtb-0a72878817e979fb2",
            "subnet_id": "subnet-03ac46febb1735e91"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b542f98d9a294a09",
            "route_table_id": "rtb-0a72878817e979fb2",
            "subnet_id": "subnet-058beb16f169e5cc8"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:security-group/sg-0c38d37027f74d7b6",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c38d37027f74d7b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "046660960196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:security-group/sg-0ee78d4669298cb31",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee78d4669298cb31",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "046660960196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:security-group/sg-01508e3f0bae1fb47",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01508e3f0bae1fb47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "046660960196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:security-group/sg-01c6f6786d8a3314a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c6f6786d8a3314a",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "046660960196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:security-group/sg-0100b24fdf2c7240e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0100b24fdf2c7240e",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "046660960196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:security-group/sg-0acd4455f9a123669",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acd4455f9a123669",
            "ingress": [],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "046660960196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3786157734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0100b24fdf2c7240e",
            "self": false,
            "source_security_group_id": "sg-0c38d37027f74d7b6",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3854770792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c6f6786d8a3314a",
            "self": false,
            "source_security_group_id": "sg-0100b24fdf2c7240e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1628887857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ee78d4669298cb31",
            "self": false,
            "source_security_group_id": "sg-0c38d37027f74d7b6",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-648927848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ee78d4669298cb31",
            "self": false,
            "source_security_group_id": "sg-0acd4455f9a123669",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-3043707618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ee78d4669298cb31",
            "self": false,
            "source_security_group_id": "sg-0acd4455f9a123669",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-614333020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0100b24fdf2c7240e",
            "self": false,
            "source_security_group_id": "sg-01508e3f0bae1fb47",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-542826636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0acd4455f9a123669",
            "self": false,
            "source_security_group_id": "sg-01c6f6786d8a3314a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3094122850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0acd4455f9a123669",
            "self": false,
            "source_security_group_id": "sg-0c38d37027f74d7b6",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:subnet/subnet-0098bc76d48e7e2b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0098bc76d48e7e2b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046660960196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-PrivateSubnet-0",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-PrivateSubnet-0",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:subnet/subnet-01dc4ee0d962aaabb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dc4ee0d962aaabb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046660960196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-PrivateSubnet-1",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-PrivateSubnet-1",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:subnet/subnet-00061e0538a799c2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00061e0538a799c2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046660960196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-PrivateSubnet-2",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-PrivateSubnet-2",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:subnet/subnet-08063b964ce05c7d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08063b964ce05c7d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046660960196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-PrivateSubnet-3",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "royalt-PrivateSubnet-3",
              "Owner-Email": "thursdayfrip@gmail.com"
            },
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:subnet/subnet-03ac46febb1735e91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ac46febb1735e91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046660960196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Owner-Email": "thursdayfrip@gmail.com",
              "name": "royalt-Public_Subnet-0"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Owner-Email": "thursdayfrip@gmail.com",
              "name": "royalt-Public_Subnet-0"
            },
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:subnet/subnet-058beb16f169e5cc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058beb16f169e5cc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046660960196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Owner-Email": "thursdayfrip@gmail.com",
              "name": "royalt-Public_Subnet-1"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Owner-Email": "thursdayfrip@gmail.com",
              "name": "royalt-Public_Subnet-1"
            },
            "vpc_id": "vpc-0f8a7db886e16a629"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046660960196:vpc/vpc-0f8a7db886e16a629",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0149678a561271aaa",
            "default_route_table_id": "rtb-0ced21f913e5d054e",
            "default_security_group_id": "sg-0ad552dd3cbae6997",
            "dhcp_options_id": "dopt-09356bface415ed28",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f8a7db886e16a629",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ced21f913e5d054e",
            "owner_id": "046660960196",
            "tags": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Owner-Email": "thursdayfrip@gmail.com",
              "name": "royalt-VPC"
            },
            "tags_all": {
              "Billing-Account": "046660960196",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Owner-Email": "thursdayfrip@gmail.com",
              "name": "royalt-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}